2025-11-12  Zhengyi Fu  <i@fuzy.me>

	Fix error in gptel-tools

	* site-lisp/gptel-tools.el (gptel-tools--shell-command-confirm-p):
	Treat nil working-dir as `default-directory'.

2025-11-10  Zhengyi Fu  <i@fuzy.me>

	Use magit to show consult-git-log-grep's results

	* init.el (consult-git-log-grep-open-function): Set to `magit-show-commit'.
	(consult-git-log-grep-preview): Set to t.

2025-11-10  Zhengyi Fu  <i@fuzy.me>

	* packages.el: New package consult-git-log-grep.

2025-11-05  Zhengyi Fu <i@fuzy.me>

        gptel-config.el: Do not change global context

	* site-lisp/gptel-config.el (gptel-agent--setup-context): Make
	`gptel-context' buffer local variable.

2025-10-29  Zhengyi Fu  <i@fuzy.me>

	Hack to run on NixOS

	* site-lisp/telega-config.el  (telega-server-command): Do not set
	on NixOS.
	* packages.el: Do not install packages
	that depends on native libraries on NixOS.
	* early-init.el (emacs-is-installed-by-nix): New constant.
	Export exec-path to PATH if running in NixOS.

2025-10-17  Zhengyi Fu  <i@fuzy.me>

	Set correct type of warning

	* site-lisp/tui/fuzzy-finder.el (fuzzy-finder-default-class):
	Change type of the warning to `fuzzy-finder'.

2025-10-14  Zhengyi Fu  <i@fuzy.me>

	* init.el (elisp-fontify-semantically): Set to t.

2025-10-13  Zhengyi Fu  <i@fuzy.me>

	Remove semel

	* init.el (dotemacs-theme-refresh): Remove configuration of semel.
	* packages.el: Remove semel.

2025-10-10  Zhengyi Fu  <i@fuzy.me>

	* init.el (dotemacs-theme-refresh): Use `modus-themes-get-current-theme'.

2025-09-29  Zhengyi Fu  <i@fuzy.me>

	Style change on message-ring

	* init.el (message-insert-ring): Use named-let.
	(message-ring): Increase size to 128.

2025-09-29  Zhengyi Fu  <i@fuzy.me>

	Make `tramp-persistency-file-name' unreadable by other users

	* init.el (tramp-dump-connection-properties): Change permission of
	`tramp-persistency-file-name' to 0600.

2025-09-28  Zhengyi Fu  <i@fuzy.me>

	Enable orderless style and move to minibuffer for Corfu
